feat(KSTIP-1494): sonarqube fixes